Fix: neomorphism button for dark mode

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -56,3 +56,36 @@ code {
   border: 4px solid rgb(149, 136, 136);
   background-image: linear-gradient(to bottom right, red, orange, yellow, green, blue, indigo, violet);
 }
+.btnWDark{
+  width: 60px;
+  height: 60px;
+  margin: 10px;
+  border-radius: 100%;
+  background-color: #c0c0c0;
+  /* box-shadow: 1px 5px 7px #161514; */
+  box-shadow: var(--brShadowDark), 
+              var(--tlShadowDark);
+  border: 4px solid rgb(149, 136, 136);
+}
+.btnDDark{
+  width: 60px;
+  height: 60px;
+  margin: 10px;
+  border-radius: 100%;
+  background-color: #332D2D;
+  /* box-shadow: 1px 5px 7px #161514; */
+  box-shadow: var(--brShadowDark), 
+              var(--tlShadowDark);
+  border: 4px solid rgb(149, 136, 136);
+}
+.btnRDark{
+  width: 60px;
+  height: 60px;
+  margin: 10px;
+  border-radius: 100%;
+  /* box-shadow: 1px 5px 7px #161514; */
+  box-shadow: var(--brShadowDark), 
+              var(--tlShadowDark);
+  border: 4px solid rgb(149, 136, 136);
+  background-image: linear-gradient(to bottom right, red, orange, yellow, green, blue, indigo, violet);
+}
